add auth to docker-compose

--- a/config/prod.env
+++ b/config/prod.env
@@ -1,12 +1,15 @@
-PG_DATABASE_NAME=auth
-PG_USER=auth-user 
-PG_PASSWORD=auth-password 
-PG_PORT=54321
-CONTAINER_PG_PORT=5432
-MIGRATION_DIR=./migration
+PROD_PG_DATABASE_NAME=auth
+PROD_PG_USER=auth-user 
+PROD_PG_PASSWORD=auth-password 
+PROD_PG_OUTER_PORT=54321
+PROD_PG_INNER_PORT=5432
+PROD_GPRC_OUTER_PORT=50051
+PROD_GPRC_INNER_PORT=50051
+PROD_MIGRATION_DIR=./migration
 
-PG_DSN="host=localhost port=54321 dbname=auth user=auth-user password=auth-password sslmode=disable"
-MIGRATION_DSN="host=pg-local port=5432 dbname=auth user=auth-user password=auth-password sslmode=disable"
+MIGRATION_DSN="host=pg port=5432 dbname=auth user=auth-user password=auth-password sslmode=disable"
 
 GRPC_HOST=0.0.0.0
 GRPC_PORT=50051
+
+PG_DSN="host=pg port=5432 dbname=auth user=auth-user password=auth-password sslmode=disable"
