--- a/config/local.env
+++ b/config/local.env
@@ -1,12 +1,13 @@
-PG_DATABASE_NAME=auth
-PG_USER=auth-user 
-PG_PASSWORD=auth-password 
-PG_PORT=54321
-CONTAINER_PG_PORT=5432
-MIGRATION_DIR=./migration
-
-PG_DSN="host=localhost port=54321 dbname=auth user=auth-user password=auth-password sslmode=disable"
-MIGRATION_DSN="host=pg-local port=5432 dbname=auth user=auth-user password=auth-password sslmode=disable"
+LOCAL_PG_DATABASE_NAME=auth
+LOCAL_PG_USER=auth-user 
+LOCAL_PG_PASSWORD=auth-password 
+LOCAL_PG_OUTER_PORT=54321
+LOCAL_PG_INNER_PORT=5432
+LOCAL_GPRC_OUTER_PORT=50051
+LOCAL_GPRC_INNER_PORT=50051
+LOCAL_MIGRATION_DIR=./migration
 
 GRPC_HOST=0.0.0.0
 GRPC_PORT=50051
+
+PG_DSN="host=pg port=5432 dbname=auth user=auth-user password=auth-password sslmode=disable"
