add env to migrator

--- a/config/local.env
+++ b/config/local.env
@@ -1,11 +1,11 @@
-LOCAL_PG_DATABASE_NAME=auth
-LOCAL_PG_USER=auth-user 
-LOCAL_PG_PASSWORD=auth-password 
-LOCAL_PG_OUTER_PORT=54321
-LOCAL_PG_INNER_PORT=5432
-LOCAL_GPRC_OUTER_PORT=50051
-LOCAL_GPRC_INNER_PORT=50051
-LOCAL_MIGRATION_DIR=./migration
+PG_DATABASE_NAME=auth
+PG_USER=auth-user 
+PG_PASSWORD=auth-password 
+PG_OUTER_PORT=54321
+PG_INNER_PORT=5432
+GPRC_OUTER_PORT=50051
+GPRC_INNER_PORT=50051
+MIGRATION_DIR=./migration
 
 GRPC_HOST=0.0.0.0
 GRPC_PORT=50051
