--- a/config/prod.env
+++ b/config/prod.env
@@ -1,13 +1,11 @@
-PROD_PG_DATABASE_NAME=auth
-PROD_PG_USER=auth-user 
-PROD_PG_PASSWORD=auth-password 
-PROD_PG_OUTER_PORT=54321
-PROD_PG_INNER_PORT=5432
-PROD_GPRC_OUTER_PORT=50051
-PROD_GPRC_INNER_PORT=50051
-PROD_MIGRATION_DIR=./migration
-
-MIGRATION_DSN="host=pg port=5432 dbname=auth user=auth-user password=auth-password sslmode=disable"
+PG_DATABASE_NAME=auth
+PG_USER=auth-user 
+PG_PASSWORD=auth-password 
+PG_OUTER_PORT=54321
+PG_INNER_PORT=5432
+GPRC_OUTER_PORT=50051
+GPRC_INNER_PORT=50051
+MIGRATION_DIR=./migration
 
 GRPC_HOST=0.0.0.0
 GRPC_PORT=50051
