--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,6 +16,70 @@ env:
   PG_CONTAINER_NAME: "pg-container"
 
 jobs:
+  build-and-test:
+    runs-on: ubuntu-latest
+    steps:
+        - uses: actions/checkout@v4
+
+        - name: set up Go
+          uses: actions/setup-go@v5
+          with:
+            go-version: '1.22'
+            cache-dependency-path: go.sum
+
+        - name: build
+          run: |
+          cd app 
+          go build -o ../bin/ -v ./...
+
+        - name: test
+          run: |
+          cd app
+          test -v ./...
+
+  linter:
+    name: lint
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
+        with:
+          go-version: '1.22'
+          cache: false
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v6
+        with:
+          # Require: The version of golangci-lint to use.
+          # When `install-mode` is `binary` (default) the value can be v1.2 or v1.2.3 or `latest` to use the latest version.
+          # When `install-mode` is `goinstall` the value can be v1.2.3, `latest`, or the hash of a commit.
+          version: v1.60
+
+          # Optional: working directory, useful for monorepos
+          working-directory: ./app
+
+          # Optional: golangci-lint command line arguments.
+          #
+          # Note: By default, the `.golangci.yml` file should be at the root of the repository.
+          # The location of the configuration file can be changed by using `--config=`
+          args: --timeout=30m --config=./.golangci.pipeline.yaml
+
+          # Optional: show only new issues if it's a pull request. The default value is `false`.
+          # only-new-issues: true
+
+          # Optional: if set to true, then all caching functionality will be completely disabled,
+          #           takes precedence over all other caching options.
+          # skip-cache: true
+
+          # Optional: if set to true, then the action won't cache or restore ~/go/pkg.
+          # skip-pkg-cache: true
+
+          # Optional: if set to true, then the action won't cache or restore ~/.cache/go-build.
+          # skip-build-cache: true
+
+          # Optional: The mode to install golangci-lint. It can be 'binary' or 'goinstall'.
+          # install-mode: "goinstall"
+
+
   image-build-and-push:
     runs-on: ubunt-22.04
   
@@ -47,18 +111,18 @@ jobs:
 
     steps:
       - name: create .env file
-          run: |
-            echo "PG_DATABASE_NAME=${{ secrets.PG_DATABASE_NAME }}" >> .env
-            echo "PG_USER=${{ secrets.PG_USER }}" >> .env
-            echo "PG_PASSWORD=${{ secrets.PG_PASSWORD }}" >> .env
-            echo "PG_OUTER_PORT=${{ secrets.PG_OUTER_PORT }}" >> .env
-            echo "PG_INNER_PORT=${{ secrets.PG_INNER_PORT }}" >> .env
-            echo "GPRC_OUTER_PORT=${{ secrets.GPRC_OUTER_PORT }}" >> .env
-            echo "GPRC_INNER_PORT=${{ secrets.GPRC_INNER_PORT }}" >> .env
-            echo "MIGRATION_DIR=${{ secrets.MIGRATION_DIR }}" >> .env
-            echo "GRPC_HOST=${{ secrets.GRPC_HOST }}" >> .env
-            echo "GRPC_PORT=${{ secrets.GRPC_PORT }}" >> .env
-            echo "PG_DSN=\"host=${{ PG_IMAGE_NAME }} port=${{ secrets.PG_INNER_PORT }} dbname=${{ secrets.PG_DATABASE_NAME }} user=${{ secrets.PG_USER }} password=${{ secrets.PG_PASSWORD }} sslmode=disable\"" >> .env
+        run: | 
+          echo "PG_DATABASE_NAME=${{ secrets.PG_DATABASE_NAME }}" >> .env
+          echo "PG_USER=${{ secrets.PG_USER }}" >> .env
+          echo "PG_PASSWORD=${{ secrets.PG_PASSWORD }}" >> .env
+          echo "PG_OUTER_PORT=${{ secrets.PG_OUTER_PORT }}" >> .env
+          echo "PG_INNER_PORT=${{ secrets.PG_INNER_PORT }}" >> .env
+          echo "GPRC_OUTER_PORT=${{ secrets.GPRC_OUTER_PORT }}" >> .env
+          echo "GPRC_INNER_PORT=${{ secrets.GPRC_INNER_PORT }}" >> .env
+          echo "MIGRATION_DIR=${{ secrets.MIGRATION_DIR }}" >> .env
+          echo "GRPC_HOST=${{ secrets.GRPC_HOST }}" >> .env
+          echo "GRPC_PORT=${{ secrets.GRPC_PORT }}" >> .env
+          echo "PG_DSN=\"host=${{ PG_IMAGE_NAME }} port=${{ secrets.PG_INNER_PORT }} dbname=${{ secrets.PG_DATABASE_NAME }} user=${{ secrets.PG_USER }} password=${{ secrets.PG_PASSWORD }} sslmode=disable\"" >> .env
 
 
       - name: deploy to selectel cloud via SSH action
