--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -29,7 +29,7 @@ jobs:
 
         - name: build
           run: |
-          cd app 
+          cd ./app 
           go build -o ../bin/ -v ./...
 
         - name: test
