--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -123,13 +123,13 @@ jobs:
           echo "MIGRATION_DIR=${{ secrets.MIGRATION_DIR }}" >> .env
           echo "GRPC_HOST=${{ secrets.GRPC_HOST }}" >> .env
           echo "GRPC_PORT=${{ secrets.GRPC_PORT }}" >> .env
-          echo "PG_DSN=\"host=${{ PG_IMAGE_NAME }} port=${{ secrets.PG_INNER_PORT }} dbname=${{ secrets.PG_DATABASE_NAME }} user=${{ secrets.PG_USER }} password=${{ secrets.PG_PASSWORD }} sslmode=disable\"" >> .env
+          echo "PG_DSN=\"host=$PG_IMAGE_NAME port=${{ secrets.PG_INNER_PORT }} dbname=${{ secrets.PG_DATABASE_NAME }} user=${{ secrets.PG_USER }} password=${{ secrets.PG_PASSWORD }} sslmode=disable\"" >> .env
 
       - name: deploy to selectel cloud via SSH action
         uses: appleboy/ssh-action@v1.0.0
         with:
           host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SSH_USERNAME}}
+          username: ${{ secrets.SSH_USERNAME }}
           key: ${{ secrets.SSHKEY }}
           envs:  AUTH_IMAGE_NAME, AUTH_CONTAINER_NAME, MIGRATOR_IMAGE_NAME, MIGRATOR_CONTAINER_NAME
           script: |
