--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -108,7 +108,7 @@ jobs:
       
   deploy-images:
     runs-on: ubuntu-22.04
-    needs: image-build-and-push
+    needs: images-build-and-push
 
     steps:
       - name: create .env file
