--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,7 +12,7 @@ env:
   AUTH_CONTAINER_NAME: "auth-server-container"
   MIGRATOR_IMAGE_NAME: "migrator"
   MIGRATOR_CONTAINER_NAME: "migrator-container"
-  PG_IMAGE_NAME: "pg"
+  PG_IMAGE_NAME: "postgres:17.0-alpine3.20"
   PG_CONTAINER_NAME: "pg-container"
 
 jobs:
@@ -138,14 +138,16 @@ jobs:
             
             # login into selectel registry
             echo "${{ secrets.REGISTRY_PASSWORD }}" | docker login -u ${{ secrets.REGISTRY_USERNAME }} $REGISTRY --password-stdin
-              
-            # stop running containers
-            docker stop $MIGRATOR_CONTAINER_NAME $AUTH_CONTAINER_NAME $PG_CONTAINER_NAME 
-              
-            # remove old containers
-            docker rm $MIGRATOR_CONTAINER_NAME $AUTH_CONTAINER_NAME $PG_CONTAINER_NAME 
+
+            # stop and remove containers if they exist
+            for container in $MIGRATOR_CONTAINER_NAME $AUTH_CONTAINER_NAME $PG_CONTAINER_NAME; do
+                if [ "$(docker ps -q -f name=$container)" ]; then
+                    docker stop $container
+                    docker rm $container
+                fi
+            done 
               
             # sun a new containers from a new images
             docker run -d --env-file .env --name $AUTH_CONTAINER_NAME -p ${{ secrets.GPRC_OUTER_PORT }}:${{ secrets.GPRC_INNER_PORT }} -t $REGISTRY/$AUTH_IMAGE_NAME:$TAG_NAME
             docker run -d --env-file .env --name $MIGRATOR_CONTAINER_NAME -t $REGISTRY/$MIGRATOR_IMAGE_NAME:$TAG_NAME
-            docker run -d --env-file .env --name $PG_CONTAINER_NAME -p ${{ secrets.PG_OUTER_PORT }}:${{ secrets.PG_INNER_PORT }} -t $REGISTRY/$PG_IMAGE_NAME
+            docker run -d --env-file .env --name $PG_CONTAINER_NAME -p ${{ secrets.PG_OUTER_PORT }}:${{ secrets.PG_INNER_PORT }} -t $PG_IMAGE_NAME
