add print to check env

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -146,7 +146,14 @@ jobs:
                     docker rm $container
                 fi
             done 
-              
+
+            echo "Starting containers with the following parameters:"
+            echo "AUTH_IMAGE_NAME: $AUTH_IMAGE_NAME"
+            echo "MIGRATOR_IMAGE_NAME: $MIGRATOR_IMAGE_NAME"
+            echo "PG_IMAGE_NAME: $PG_IMAGE_NAME"
+            echo "REGISTRY: $REGISTRY"
+            echo "TAG_NAME: $TAG_NAME"
+
             # sun a new containers from a new images
             docker run -d --env-file .env --name $AUTH_CONTAINER_NAME -p ${{ secrets.GPRC_OUTER_PORT }}:${{ secrets.GPRC_INNER_PORT }} -t $REGISTRY/$AUTH_IMAGE_NAME:$TAG_NAME
             docker run -d --env-file .env --name $MIGRATOR_CONTAINER_NAME -t $REGISTRY/$MIGRATOR_IMAGE_NAME:$TAG_NAME
