--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -153,21 +153,27 @@ jobs:
                 fi
             done 
 
+            # init docker network
+            docker network create my_network
+
             # start a new containers from a new images
             docker run -d \
             --name $AUTH_CONTAINER_NAME \
+            --network my_network \
             -e TZ=Europe/Moscow \
             -p ${{ secrets.GPRC_OUTER_PORT }}:${{ secrets.GPRC_INNER_PORT }} \
             -t $REGISTRY/$AUTH_IMAGE_NAME:$TAG_NAME
 
             docker run -d \
             --env-file .env \
+            --network my_network \
             --name $MIGRATOR_CONTAINER_NAME \
             -t $REGISTRY/$MIGRATOR_IMAGE_NAME:$TAG_NAME
 
             docker run -d \
             --env-file .env \
             --name $PG_CONTAINER_NAME \
+            --network my_network \
             -p ${{ secrets.PG_OUTER_PORT }}:${{ secrets.PG_INNER_PORT }} \
             -t $PG_IMAGE_NAME
 
