add redis to service

--- a/config/local.env
+++ b/config/local.env
@@ -2,3 +2,11 @@ GRPC_HOST=0.0.0.0
 GRPC_PORT=50051
 
 PG_DSN="host=pg port=5432 dbname=auth user=auth-user password=auth-password sslmode=disable"
+
+
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_CONNECTION_TIMEOUT_SEC=5
+REDIS_MAX_IDLE=10
+REDIS_IDLE_TIMEOUT_SEC=240
+REDIS_TTL_SEC=300
